overlapping text fix

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,3 @@
-nav{
-  margin-bottom: 30px;
-}
 
 li.nav-item:hover{
   background-color: cadetblue;
@@ -12,6 +9,7 @@ h2.home {
   color: white; 
   background-color: cadetblue;
   margin-left:60px;  
+  margin-top: 0px;
   padding: 0 10px 0px 10px;
 }
 
@@ -19,8 +17,9 @@ a:hover{
   text-decoration: none;
 }
 
-h1,h2{
-color:cadetblue;
+h2{
+  color:cadetblue;
+  margin-top: 30px;
 }
 
 .footer{
